testing speech and text emotion recogntion

--- a/speech_test.ipynb
+++ b/speech_test.ipynb
@@ -7,8 +7,10 @@
    "outputs": [],
    "source": [
     "import gc\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "from speech_emotion.evaluation import *\n",
     "from speech_emotion.features import *\n",
     "from keras.models import load_model\n",
